--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/cards-editor.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/components/cards-editor.html
@@ -32,7 +32,7 @@
                         class="btn-reset __action umb-outline"
                         title="{{btn.label}}"
                         ng-click="btn.method(); $event.stopPropagation();"
-                        ng-repeat="btn in vm.blockActions[$index]">
+                        ng-repeat="btn in vm.blockActions[item.key]">
                     <umb-icon icon="icon-{{btn.icon}}" class="icon"></umb-icon>
                     <span class="sr-only" ng-bind="btn.label"></span>
                 </button>
