Fixed up all the outstanding nullability warnings

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/ContentBlockPreview.cshtml
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/ContentBlockPreview.cshtml
@@ -1,9 +1,9 @@
-﻿@* Copyright © 2019 Lee Kelleher.
+@* Copyright © 2019 Lee Kelleher.
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at https://mozilla.org/MPL/2.0/. *@
 @inherits Umbraco.Cms.Web.Common.Views.ContentBlockPreviewView
 <div class="lk-content-blocks__preview--default">
     <i class="icon @Model.ElementTypeIcon"></i>
-    <h5>@Model.Element.Key</h5>
+    <h5>@Model.Element?.Key</h5>
 </div>
