--- a/src/Umbraco.Cms.15.x/Views/_layout.cshtml
+++ b/src/Umbraco.Cms.15.x/Views/_layout.cshtml
@@ -1,14 +1,86 @@
-@inherits UmbracoViewPage
+﻿@inherits UmbracoViewPage
 @{
-    Layout = null;
+    var homepage = Model.AncestorOrSelf<HomePage>(2);
+
+    var siteTitle = string.IsNullOrWhiteSpace(homepage?.SiteTitle) == false
+        ? homepage.SiteTitle
+        : homepage?.Parent?.Name;
+
+    var metaTitle = Model.Id == homepage?.Id
+        ? siteTitle
+        : string.Concat(string.Join(" &raquo; ", Model.AncestorsOrSelf().Where(x => x.IsVisible() && x.Level > 2).Select(x => x.Name)), " &laquo; ", siteTitle);
+
+    var modules = new List<IPublishedElement>(homepage?.SiteModules ?? Enumerable.Empty<IPublishedElement>());
+    if (Model is IPageModulesProperty pm && pm.PageModules?.Any() == true)
+    {
+        modules.AddRange(pm.PageModules);
+    }
+
+    var culture = System.Globalization.CultureInfo.CurrentCulture;
+    var dir = culture.TextInfo.IsRightToLeft ? "rtl" : "ltr";
+    var lang = culture.TwoLetterISOLanguageName;
 }
 <!doctype html>
-<html>
-<head>
-    <title>@Model.Name</title>
+<html dir="@dir" lang="@lang">
+<head prefix="og: http://ogp.me/ns#">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>@Html.Raw(metaTitle)</title>
+    <link rel="icon" href="/favicon.ico">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/open-fonts@1.1.1/fonts/inter.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@@exampledev/new.css@1.1.2/new.min.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    @RenderSection("head", required: false)
 </head>
 <body>
-    <h1>@Model.Name</h1>
-    @RenderBody()
+    @if (homepage?.Header?.FirstOrDefault() is HeaderSettings header)
+    {
+        <header>
+            <h2>@homepage.SiteTitle</h2>
+            @if (header.MainMenu?.Any() == true)
+            {
+                var counter = 0;
+                <nav>
+                    @foreach (var item in header.MainMenu)
+                    {
+                        if (counter++ > 0)
+                        {
+                            <span> / </span>
+                        }
+                        <a href="@item.Url()" class="@(item.Id == Model.Id ? "current" : null)">@item.Name</a>
+                    }
+                </nav>
+            }
+            <p><a href="/umbraco/#/content/content/edit/@Model.Id" target="_self">Go to the Umbraco back-office.</a></p>
+        </header>
+    }
+
+    <main role="main">
+        @RenderSection("body")
+        @RenderBody()
+    </main>
+
+    @if (homepage?.Footer?.FirstOrDefault() is FooterSettings footer)
+    {
+        <footer>
+            <p>@homepage.SiteTitle, Lee Kelleher &copy; 2021</p>
+            @if (footer.FooterMenu?.Any() == true)
+            {
+                var counter = 0;
+                <nav>
+                    @foreach (var item in footer.FooterMenu)
+                    {
+                        if (counter++ > 0)
+                        {
+                            <span> / </span>
+                        }
+                        <a href="@item.Url" target="@item.Target">@item.Name</a>
+                    }
+                </nav>
+            }
+        </footer>
+    }
+
+    @RenderSection("js", required: false)
 </body>
 </html>
